@@ -9,9 +9,9 @@ use Test::More tests => 12;
 BEGIN { use_ok('Lintian::Util', qw(normalize_pkg_path)); }
 
 # Safe - absolute
-is(normalize_pkg_path('/usr/share/java', '/usr/share/ant/file'),
+is(normalize_pkg_path('usr/share/java', '/usr/share/ant/file'),
     'usr/share/ant/file', 'Safe absolute path');
-is(normalize_pkg_path('/usr/share/ant', '/'), q{}, 'Safe absolute root');
+is(normalize_pkg_path('usr/share/ant', '/'), q{}, 'Safe absolute root');
 
 # Safe - relative
 is(normalize_pkg_path('/usr/share/java', './file/.'),
@@ -20,16 +20,16 @@ is(normalize_pkg_path('/usr/share/java', '../ant/./file'),
     'usr/share/ant/file', 'Safe simple relative path');
 is(
     normalize_pkg_path(
-        '/usr/share/java', '../../../usr/./share/../share/./ant/file'
+        'usr/share/java', '../../../usr/./share/../share/./ant/file'
     ),
     'usr/share/ant/file',
     'Safe absurd relative path'
 );
-is(normalize_pkg_path('/usr/share/java', '.'),
+is(normalize_pkg_path('usr/share/java', '.'),
     'usr/share/java', 'Safe relative dot path');
 is(normalize_pkg_path('/', '.'), q{}, 'Safe relative root dot');
 is(normalize_pkg_path('/', 'usr/..'), q{}, 'Safe absurd relative root path');
-is(normalize_pkg_path('/usr/share/java', '../../../'),
+is(normalize_pkg_path('usr/share/java', '../../../'),
     q{}, 'Safe absurd relative path to root');
 
 # Unsafe
